--- a/main.css
+++ b/main.css
@@ -10,8 +10,9 @@
   --clr-light: #fff;
   --clr-accent: rgb(222, 52, 0);
   --clr-accent-dark: rgb(163, 138, 0);
-  --clr-secondary: rgb(0, 62, 163);
+  --clr-secondary: rgb(0, 76, 199);
   --br:.5em;
+  --transition:transform 250ms cubic-bezier(.21,1.06,.81,1.01), opacity 100ms linear;
 }
 
 body {
@@ -32,15 +33,37 @@ img {
   max-width: 100%;
 }
 
+.btn {
+  cursor: pointer;
+  border: 0;
+  background: var(--clr-secondary);
+  border-radius: 100vw;
+  color: var(--clr-light);
+  font-weight: bold;
+  padding: .5em 1.5em;
+}
+
+.icon::before {
+  font-family: "Font Awesome 5 Free";
+  display: inline-block;
+  font-weight: 900;
+  font-style: normal;
+  font-variant: normal;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+}
+
 .game {
   position: relative;
-  width: 200px;
+  width: 12.5em;
+  cursor: pointer;
 }
 
 .streamers {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  text-align: center;
 }
 
 .streamers img {
@@ -54,12 +77,20 @@ img {
   position: absolute;
   top: 0;
   right: 1em;
+  z-index: 1000;
   font-weight: bold;
-  font-size: 1.25rem;
+  font-size: 1.125rem;
   background: rgba(0, 0, 0, 0.5);
   padding: .5em .5em .75em;
   -webkit-clip-path: polygon(100% 0%, 100% 100%, 50% 80%, 0 100%, 0 0, 49% 0);
           clip-path: polygon(100% 0%, 100% 100%, 50% 80%, 0 100%, 0 0, 49% 0);
+  -webkit-transition: var(--transition);
+  transition: var(--transition);
+}
+
+.front {
+  -webkit-transition: 250ms;
+  transition: 250ms;
 }
 
 .front .thumbnail {
@@ -82,6 +113,22 @@ img {
           align-items: center;
 }
 
+.front .viewers {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.front .viewers::before {
+  font-size: 0.85em;
+  color: rgba(255, 255, 255, 0.5);
+  margin-right: 0.5em;
+  content: "\f007";
+}
+
 .front .streamers img {
   border: 1px solid var(--clr-dark);
 }
@@ -98,6 +145,144 @@ img {
 }
 
 .back {
-  display: none;
+  opacity: 0;
+  position: absolute;
+  top: 55%;
+  left: 0;
+  right: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 1.5em;
+  -webkit-transform: translateY(35%);
+          transform: translateY(35%);
+}
+
+.back .streaming-info {
+  -webkit-columns: 2;
+          columns: 2;
+  -webkit-column-rule: 1px solid rgba(255, 255, 255, 0.5);
+          column-rule: 1px solid rgba(255, 255, 255, 0.5);
+}
+
+.back .game-stat {
+  font-size: 1.125rem;
+  text-align: center;
+}
+
+.back .game-stat span {
+  font-size: .85rem;
+  display: block;
+}
+
+.background {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: #282e36;
+  z-index: -1;
+  -webkit-transform: scale(0.2, 0.9);
+          transform: scale(0.2, 0.9);
+  opacity: 0;
+  border-radius: var(--br);
+}
+
+.game:hover .rank {
+  -webkit-transform: translate(150%, -77%);
+          transform: translate(150%, -77%);
+}
+
+.game:hover .front {
+  -webkit-transform: translateY(-30%) scale(0.8);
+          transform: translateY(-30%) scale(0.8);
+}
+
+.game:hover .front .name {
+  -webkit-animation: gameName 250ms forwards;
+          animation: gameName 250ms forwards;
+}
+
+.game:hover .front .stats {
+  opacity: 0;
+}
+
+.game:hover .back {
+  opacity: 1;
+  -webkit-transition: opacity 150ms linear, -webkit-transform 250ms ease;
+  transition: opacity 150ms linear, -webkit-transform 250ms ease;
+  transition: transform 250ms ease, opacity 150ms linear;
+  transition: transform 250ms ease, opacity 150ms linear, -webkit-transform 250ms ease;
+}
+
+.game:hover .back .streamers {
+  width: 100%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.game:hover .back .streamer {
+  font-size: .9rem;
+}
+
+.game:hover .back .name {
+  font-weight: bold;
+}
+
+.game:hover .background {
+  -webkit-transition: opacity 100ms linear, -webkit-transform 250ms cubic-bezier(0.21, 1.06, 0.81, 1.01);
+  transition: opacity 100ms linear, -webkit-transform 250ms cubic-bezier(0.21, 1.06, 0.81, 1.01);
+  transition: transform 250ms cubic-bezier(0.21, 1.06, 0.81, 1.01), opacity 100ms linear;
+  transition: transform 250ms cubic-bezier(0.21, 1.06, 0.81, 1.01), opacity 100ms linear, -webkit-transform 250ms cubic-bezier(0.21, 1.06, 0.81, 1.01);
+  opacity: 1;
+  -webkit-transform: scale(1.35, 1.3) translateY(5%);
+          transform: scale(1.35, 1.3) translateY(5%);
+}
+
+@-webkit-keyframes gameName {
+  0% {
+    text-align: left;
+    opacity: 1;
+  }
+  20% {
+    text-align: left;
+    opacity: 0;
+  }
+  50% {
+    text-align: center;
+    opacity: 0;
+  }
+  100% {
+    text-align: center;
+    opacity: 1;
+  }
+}
+
+@keyframes gameName {
+  0% {
+    text-align: left;
+    opacity: 1;
+  }
+  20% {
+    text-align: left;
+    opacity: 0;
+  }
+  50% {
+    text-align: center;
+    opacity: 0;
+  }
+  100% {
+    text-align: center;
+    opacity: 1;
+  }
 }
 /*# sourceMappingURL=main.css.map */
