--- a/main.scss
+++ b/main.scss
@@ -9,8 +9,9 @@
     --clr-light: #fff;
     --clr-accent: rgb(222, 52, 0);
     --clr-accent-dark: rgb(163, 138, 0);
-    --clr-secondary: rgb(0, 62, 163);
+    --clr-secondary: rgb(0, 76, 199);
     --br:.5em;
+    --transition:transform 250ms cubic-bezier(.21,1.06,.81,1.01), opacity 100ms linear;
 
 }
 
@@ -28,13 +29,34 @@ h1,h2,h3,p{
 img{
     max-width: 100%;
 }
+.btn{
+   
+    cursor: pointer;
+    border: 0;
+    background: var(--clr-secondary);
+    border-radius: 100vw;
+    color: var(--clr-light);
+    font-weight: bold;
+    padding: .5em 1.5em;
+}
+.icon::before{
+    font-family: "Font Awesome 5 Free";
+    display: inline-block;
+    font-weight: 900;
+    font-style: normal;
+    font-variant: normal;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+}
 
 .game{
     position: relative;
-    width: 200px;
+    width: 12.5em;
+    cursor: pointer;
 }
 .streamers{
     display: flex;
+    text-align: center;
     img{
         width: 2em;
         height: 2em;
@@ -46,13 +68,17 @@ img{
     position: absolute;
     top: 0;
     right: 1em;
+    z-index: 1000;
     font-weight: bold;
-    font-size: 1.25rem;
+    font-size: 1.125rem;
     background: rgba(0,0,0,.5);
     padding:.5em .5em .75em;
     clip-path: polygon(100% 0%, 100% 100%, 50% 80%, 0 100%, 0 0, 49% 0);
+    transition: var(--transition);
 }
 .front{
+    transition:250ms ;
+
     .thumbnail{
         border-radius: var(--br);
     }
@@ -65,6 +91,23 @@ img{
         justify-content: space-between;
         align-items: center;
     }
+    .viewers{
+        display: flex;
+        align-items: center;
+    }
+
+    .viewers::before{
+            
+             
+             font-size: 0.85em;
+             color: rgba(255,255,255,.5);
+             margin-right:0.5em;
+             content: "\f007";
+           
+          
+    }
+
+
     .streamers img{
         border: 1px solid var(--clr-dark);
 
@@ -80,5 +123,109 @@ img{
 
 
 .back{
-    display: none;
+   
+    opacity: 0;
+    position: absolute;
+    top: 55%;
+    left: 0;
+    right: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1.5em;
+    transform: translateY(35%);
+
+   
+
+    .streaming-info{
+        columns: 2;
+        column-rule: 1px solid rgba(255,255,255,.5);
+        
+    }
+    .game-stat{
+        font-size: 1.125rem;
+        text-align: center;
+        
+
+        span{
+            font-size: .85rem;
+            display: block;
+        }
+    }
+}
+
+
+.background{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgb(40, 46, 54);
+    z-index: -1;
+    transform: scale(.2,.9);
+    opacity: 0;
+   
+    border-radius: var(--br);
+}
+.game:hover{
+    .rank{
+        transform: translate(150%,-77%);
+    }
+    .front{
+        transform: translateY(-30%) scale(.8);
+
+        .name{
+            animation:gameName 250ms forwards;
+        }
+
+        .stats{
+            opacity: 0;
+        }
+    }
+
+    .back{
+        opacity: 1;
+        transition: transform 250ms ease, opacity 150ms linear ;
+        
+        // transform: translateY(0);
+
+        .streamers{
+            width: 100%;
+            justify-content: space-between;
+        }
+        
+        .streamer{
+            font-size: .9rem;
+        }
+        .name{
+            font-weight: bold;
+        }
+    }
+
+
+    .background{
+        transition:transform 250ms cubic-bezier(.21,1.06,.81,1.01), opacity 100ms linear;
+        opacity: 1;
+        transform: scale(1.35,1.3) translateY(5%);
+    }
+}
+
+@keyframes gameName{
+    0%{
+        text-align: left;
+        opacity: 1;
+    }
+    20%{
+        text-align: left;
+        opacity: 0;
+    }
+    50%{
+        text-align: center;
+        opacity: 0;
+    }
+    100%{
+        text-align: center;
+        opacity: 1;
+    }
 }
