--- a/main.scss
+++ b/main.scss
@@ -39,7 +39,7 @@ img{
     font-weight: bold;
     padding: .5em 1.5em;
 }
-.icon::before{
+.icon-views::before{
     font-family: "Font Awesome 5 Free";
     display: inline-block;
     font-weight: 900;
@@ -63,6 +63,64 @@ img{
         border-radius: 50%;
     }
 }
+// Pulse Icon
+.streamer .icon{
+    display: inline-block;
+    width: 2em;
+    height: 2em;
+    position: relative;
+    transition: transform ease-in-out 150ms;
+}
+.streamer:hover .icon{
+    transform: translateY(-20%);
+}
+.streamer .icon:hover{
+    transform: translateY(-20%) scale(1.1);
+}
+.streamer:hover .icon::before{
+    opacity: 1;
+}
+
+.icon::before,
+.icon::after{
+    opacity: 0;
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    border-radius: 50%;
+}
+.icon::before{
+    content: "\f04b";
+    background: red;
+    z-index: 10;
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    font-size: .65em;
+    display: grid;
+    place-items: center;
+    transition:
+    opacity 75ms linear,
+    background-color 100ms linear;
+
+}
+.icon:hover::before{
+    background: #e00000;
+}
+.icon:hover::after{
+    background: red;
+    z-index: 1;
+    animation: pulse 1250ms infinite;
+}
+
+
+
+
+
+
+// 
 .rank{
     font-weight: bold;
     position: absolute;
@@ -72,7 +130,7 @@ img{
     font-weight: bold;
     font-size: 1.125rem;
     background: rgba(0,0,0,.5);
-    padding:.5em .5em .75em;
+    padding:0.5em 0.5em 0.75em;
     clip-path: polygon(100% 0%, 100% 100%, 50% 80%, 0 100%, 0 0, 49% 0);
     transition: var(--transition);
 }
@@ -99,7 +157,7 @@ img{
     .viewers::before{
             
              
-             font-size: 0.85em;
+             font-size: 0.75em;
              color: rgba(255,255,255,.5);
              margin-right:0.5em;
              content: "\f007";
@@ -148,7 +206,7 @@ img{
         
 
         span{
-            font-size: .85rem;
+            font-size: 0.85rem;
             display: block;
         }
     }
@@ -163,17 +221,18 @@ img{
     right: 0;
     background: rgb(40, 46, 54);
     z-index: -1;
-    transform: scale(.2,.9);
+    transform: scale(0.2,0.9);
     opacity: 0;
    
     border-radius: var(--br);
+    overflow: hidden;
 }
 .game:hover{
     .rank{
         transform: translate(150%,-77%);
     }
     .front{
-        transform: translateY(-30%) scale(.8);
+        transform: translateY(-30%) scale(0.8);
 
         .name{
             animation:gameName 250ms forwards;
@@ -227,5 +286,16 @@ img{
     100%{
         text-align: center;
         opacity: 1;
+    }
+}
+// Pulse
+@keyframes pulse{
+    0%{
+       transform: scale(0.95); 
+       opacity: .75;
+    }
+    100%{
+        transform: scale(1.35);
+        opacity: 0;
     }
 }
