--- a/main.css
+++ b/main.css
@@ -259,6 +259,20 @@ img {
   overflow: hidden;
 }
 
+.background img {
+  opacity: 0.3;
+}
+
+.background .wave {
+  position: absolute;
+  bottom: -12rem;
+  left: 0;
+  width: 200%;
+  z-index: 5;
+  -webkit-animation: wave linear 3s  infinite;
+          animation: wave linear 3s  infinite;
+}
+
 .game:hover .rank {
   -webkit-transform: translate(150%, -77%);
           transform: translate(150%, -77%);
@@ -309,6 +323,28 @@ img {
   opacity: 1;
   -webkit-transform: scale(1.35, 1.3) translateY(5%);
           transform: scale(1.35, 1.3) translateY(5%);
+}
+
+@-webkit-keyframes wave {
+  0% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  100% {
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
+  }
+}
+
+@keyframes wave {
+  0% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  100% {
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
+  }
 }
 
 @-webkit-keyframes gameName {
