--- a/main.scss
+++ b/main.scss
@@ -226,6 +226,18 @@ img{
    
     border-radius: var(--br);
     overflow: hidden;
+
+    img{
+        opacity: 0.3 ;
+    }
+    .wave{
+        position: absolute;
+        bottom: -12rem;
+        left:0;
+        width: 200%;
+        z-index: 5;
+        animation: wave linear 3s  infinite;
+    }
 }
 .game:hover{
     .rank{
@@ -267,6 +279,14 @@ img{
         transition:transform 250ms cubic-bezier(.21,1.06,.81,1.01), opacity 100ms linear;
         opacity: 1;
         transform: scale(1.35,1.3) translateY(5%);
+    }
+}
+@keyframes wave {
+    0%{
+        transform: translateX(0);
+    }
+    100%{
+        transform: translateX(-50%);
     }
 }
 
